--- a/index.html
+++ b/index.html
@@ -166,28 +166,16 @@
    <!---------------------Area de plantillas -------------------->
    <div id ="plantillas1" class="container-fluid-c">
      <div id="plantillas" class="lugar text-center relative">
-     <div class='row'>
       <div class="line"></div>
            <h2 class="secular-font center-text weight big-text">PORTAFOLIO</h2>
            <div class="line"></div>
-
-        <div class='col-md-6 col-lg-6 col-sm-6 col-xs-12 imagen-cent' style="background-image:url(/imagenes/imagen1.jpg)">
+       <div class='row'>
+        <div class='img-rounded col-md-6 col-md-offset-3 col-md-offset-3 6 col-lg-6 col-lg-offset-3 col-lg-offset-3 col-sm-12 col-xs-12 imagen-cent' style="background-image:url(/imagenes/vjotaa.png)">
           <div class='screen'>
             <div class='row full-height middle-xs'>
               <div class='col-xs-12'>
                 <div class='box'>
-                  <h3 class='lobster white-text subtitle'>Aqui dijera algo sobre la plantilla... SI TUVIERA UNA!!</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class='col-md-6 col-lg-6 col-sm-6 col-xs-12 imagen-cent' style="background-image:url(/imagenes/imagen2.jpg)">
-          <div class='screen'>
-            <div class='row full-height middle-xs'>
-              <div class='col-xs-12'>
-                <div class='box'>
-                  <h3 class='lobster white-text subtitle'>Aqui dijera algo sobre la plantilla... SI TUVIERA UNA!!</h3>
+                  <h3 class='lobster white-text subtitle'>Para mas informacion de proyectos, click <a href="https://vjotaa.herokuapp.com/">AQUI</a></h3>
                 </div>
               </div>
             </div>
@@ -484,7 +472,7 @@
 
                 <h4 class="merry center-text medium-text ">Vimar Bolivar</h4>
                 <img class=' small img-responsive img-circle' src="imagenes/ourteam2.jpg" alt="">
-                <h5 class="top merry center-text">Diseñadora grafica y vendedora de refrescos.</h5>
+                <h5 class="top merry center-text">Diseñadora grafica.</h5>
                 <ul class='centrar inline'>
                     <li class='left-p '>
                         <a target="_blank" href="https://www.facebook.com/Maria.cristina22?fref=ts">
